# QuotesAndFactsApi

./: api-config.json  main.py  pyproject.toml
.github/workflows/: manual.yml
.github/workflows /: deploy.yml
static/: complete_member_information_openapi.json  posts.yaml  swagger.json
